WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256626
FrameLoader::didFirstLayout() shouldn't restore scroll position and view state synchronously
https://bugs.webkit.org/show_bug.cgi?id=256626
Summary
FrameLoader::didFirstLayout() shouldn't restore scroll position and view stat...
Ryosuke Niwa
Reported
2023-05-10 21:09:16 PDT
It's problematic to restore scroll position and view state synchronously as that could involve nested layout / script execution. Delay this work until Page::updateRendering.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-05-10 21:13:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13737
EWS
Comment 2
2023-05-10 23:12:11 PDT
Committed
263949@main
(cc5ecdf646e3): <
https://commits.webkit.org/263949@main
> Reviewed commits have been landed. Closing PR #13737 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-10 23:13:20 PDT
<
rdar://problem/109191090
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug