FrameLoader::didFirstLayout() shouldn't restore scroll position and view state synchronously https://bugs.webkit.org/show_bug.cgi?id=256626

Reviewed by Simon Fraser.

It's problematic to restore scroll position and view state synchronously as that could involve
nested layout / script execution (due to focusing of an element).

Delay this work until the next rendering update to make FrameLoader::didFirstLayout free of
script executions.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::didFirstLayout):
(WebCore::FrameLoader::restoreScrollPositionAndViewStateSoon):
(WebCore::FrameLoader::restoreScrollPositionAndViewStateNowIfNeeded):
* Source/WebCore/loader/FrameLoader.h:
* Source/WebCore/page/Page.cpp:
(WebCore::Page::updateRendering):
(WebCore::operator<<):
* Source/WebCore/page/Page.h:

Canonical link: https://commits.webkit.org/263949@main